@@ -1,5 +1,10 @@
 2010-08-03	The InnoDB Team
 
+	* include/dict0dict.h, include/dict0dict.ic, row/row0mysql.c:
+	Fix bug #54678, InnoDB, TRUNCATE, ALTER, I_S SELECT, crash or deadlock
+
+2010-08-03	The InnoDB Team
+
 	* dict/dict0load.c, handler/ha_innodb.cc, include/db0err.h,
 	include/dict0load.h, include/dict0mem.h, include/que0que.h,
 	row/row0merge.c, row/row0mysql.c:
